--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ kappa==0.6.0
 MarkupSafe==2.1.3
 placebo==0.9.0
 psycopg2==2.9.7
+pynamodb==5.5.0
 python-dateutil==2.8.2
 python-slugify==8.0.1
 pytz==2023.3.post1
